# LightDashAngular

./: .gitignore  README.md  angular.json  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  proxy.conf.json
docs/: project-setup-flow.md  (+1 more)
mds-backend/: .env.example  README.md  pyproject.toml
mds-backend/src/mds/: __init__.py  config.py  logging_config.py  main.py
mds-backend/src/mds/api/: envelope.py  errors.py
mds-backend/src/mds/db/: models.py  seed.py  session.py
mds-backend/src/mds/routers/: ai.py  dashboards.py  dictionary.py  platform.py  query.py  saved.py  semantic.py  warehouse.py
mds-backend/src/mds/schemas/: ai.py  chart.py  dashboard.py  dictionary.py  project.py  query.py  warehouse.py
mds-backend/src/mds/scripts/: seed_demo.py
mds-backend/src/mds/services/: ai_assistant.py  chart.py  dashboard.py  dictionary.py  encryption.py
mds-backend/src/mds/services/dbt/: __init__.py  loader.py  manifest.py  parse.py
mds-backend/src/mds/services/project/: __init__.py  git.py  helpers.py
mds-backend/src/mds/services/query/: compile.py  filters.py  store.py  time_travel.py
mds-backend/tests/: conftest.py  test_api_envelope.py  test_column_lineage.py  test_config.py  test_dashboards.py  test_dbt_local.py  test_dbt_manifest.py  test_dbt_path_resolution.py  test_dictionary_and_ai.py  test_filters.py  test_logging_config.py  test_project_delete.py  test_project_repo.py  test_saved_charts.py  test_time_travel.py  test_trino_sql_logging.py  test_warehouse.py  test_z_projects.py
mds-backend/tests/fixtures/dbt/: dbt_project.yml
(+331 files in other folders)
